--- a/paper/13.0 required rate of return.Rmd
+++ b/paper/13.0 required rate of return.Rmd
@@ -77,7 +77,7 @@ The insurance purchase created value when it results in an increase in the Sharp
 P^{I} &< \dfrac{(r_c-r_f)}{(1 + r_c)} \times C_{x}^{0} + \dfrac{(r_c-r_f)}{(1 + r_c)} \times C_{w}^{0} \times \left[1 - \dfrac{SD(X_{ret})}{SD(X)}\right] \label{final}
 \end{align}
 
-The interpretation of equation (\ref{final}) is slightly more difficult than that posed by equation (\ref{eqn:cap-deploy}). However, we can recognize that the first term on the righthand side is a measure of the value of capital deployment from equation (\ref{eqn:cap-deploy}). The second term is the value provided by the reduction in risk volatility, and we intuitively understand that $(1 - \dfrac{SD(X_{ret})}{SD(X)})$ is a representation of that reduction. Further, it is intuitive that the reduced reduction in risk would apply to the excess returns on working capital, i.e., $((1 + r_c) \times C_{w}^{0})$.
+The interpretation of equation (\ref{final}) is slightly more difficult than that posed by equation (\ref{eqn:cap-deploy}). However, we can recognize that the first term on the righthand side is a measure of the value of capital deployment from equation (\ref{eqn:cap-deploy}). The second term is the value provided by the reduction in risk volatility, and we intuitively understand that $(1 - \dfrac{SD(X_{ret})}{SD(X)})$ is a representation of that reduction. Further, it is intuitive that the reduced reduction in risk would apply to the excess returns on working capital, i.e., $((r_c-r_f) \times C_{w}^{0})$.
 
 We refer to equation (\ref{final}) as the Complete Value Creation Equation, since it includes \emph{both} sources of value. We should not find this surprising since the Sharpe Ratio includes expected returns in its numerator and risk/volatility in the denominator. 
 
