--- a/paper/11.0 introduction.Rmd
+++ b/paper/11.0 introduction.Rmd
@@ -10,11 +10,11 @@ Each of these layers has a cost to it. Insurers establish premiums that are suff
 
 The profit provision will be proportional to the volatility of the risk. That is, the required supporting insurer capital is directly proportional to the volatility of the business. As a result, more volatile business will require additional profit to satisfy the insurer's shareholders. Consistent with this notion, we ignore expenses and refer to the profit provision as a capital charge in describing the cost for various insurance layers below. 
 
-*   The cost of the lowest layers will have a reasonable degree of predictability. Because costs are predictable, the value of insurance is minimal, and insureds will, therefore, typically retain this risk.^[The insured may realize value though specialized risk or claims management services provided by the insurer.] The cost for these layers will principally be the expected loss with a minimal capital charge for volatility. There may also be frictional costs associated with risk retention, such as increased audit and actuarial fees and claims costs from legal counsel and third-party claim administrators.
+*   The cost of the lowest layers will have a reasonable degree of predictability. Because costs are predictable, the value of insurance is minimal, and insureds will, therefore, typically retain this risk.^[The insured may realize value though specialized risk or claims management services provided by the insurer.] The cost for these layers will principally be the expected loss with a minimal capital charge for volatility. There may also be frictional costs associated with risk retention, such as increased audit and actuarial fees and claims costs from legal counsel and third-party claim administrators. In our example insurance tower in Figure \ref{fig:tower}, we label this layer as the "$1 million retention."
 
-*   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but would be predictable over a longer time horizon. The insurance coverage provides value to the insured by smoothing claim volatility \emph{over time}. There may be multiple insurers in the higher working layers.
+*   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but would be predictable over a longer time horizon. The insurance coverage provides value to the insured by smoothing claim volatility \emph{over time}. There may be multiple insurers in the higher working layers. We label these layers as "First Layer Excess" and "Second Layer Excess" in Figure \ref{fig:tower}.
 
-*   Insureds generally do not expect to access coverage from the highest layers. The expected claims will likely be close to $0. The variance of claims in this layer, however, may be significant.  Insurance in this layer smooths claims volatility \emph{over risks and time}. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper.
+*   Insureds generally do not expect to access coverage from the highest layers. The expected claims will likely be close to $0. The variance of claims in this layer, however, may be significant.  Insurance in this layer smooths claims volatility \emph{over risks and time}. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper. In Figure \ref{fig:tower}, we label this layer as "Third Layer Excess" in Figure \ref{fig:tower}.
 
 ```{r insurance tower, echo=FALSE, fig.height=4, fig.width=3, fig.cap= "\\label{fig:tower}Example Insurance Tower"}
 par(mar = c(1, 0, 0, 0))
@@ -33,7 +33,7 @@ text(x = 0.85, y = 7, srt = 90, label = 'Coverage Layer\n(not to scale)', cex = 
 
 ## The Value of High-excess Layers
 
-Despite minimal expected claim values, premiums in these high-excess can be significant. Sometimes buyers refer to these layers as "sleep insurance;" that is, the insurance allows the buyer to sleep at night. In this paper, we describe an approach that the buyer can use to help understand whether there is *financial value*^[That is, the value beyond the restful night of sleep.] to the insurance transaction. 
+Despite minimal expected claim values, premiums in these high-excess layers can be significant. Sometimes buyers refer to these layers as "sleep insurance;" that is, the insurance allows the buyer to sleep at night. In this paper, we describe an approach that the buyer can use to help understand whether there is *financial value*^[That is, the value beyond the restful night of sleep.] to the insurance transaction. 
 
 To assess the potential financial value, we should understand that the primary benefit of this layer is not in the loss reimbursement, but in the protection of capital that this layer of insurance provides to the insured. 
 
