--- a/paper/11.0 introduction.Rmd
+++ b/paper/11.0 introduction.Rmd
@@ -14,7 +14,7 @@ The profit provision will be proportional to the volatility of the risk. That is
 
 *   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but would be predictable over a longer time horizon. The insurance coverage provides value to the insured by smoothing claim volatility \emph{over time}. There may be multiple insurers in the higher working layers. We label these layers as "First Layer Excess" and "Second Layer Excess" in Figure \ref{fig:tower}.
 
-*   Insureds generally do not expect to access coverage from the highest layers. The expected claims will likely be close to $0. The variance of claims in this layer, however, may be significant.  Insurance in this layer smooths claims volatility \emph{over risks and time}. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper. In Figure \ref{fig:tower}, we label this layer as "Third Layer Excess" in Figure \ref{fig:tower}.
+*   Insureds generally do not expect to access coverage from the highest layers. As such, \emph{from the insureds' perspective}, the expected claims will likely be close to $0. The variance of claims in this layer for an indiviudal insured, however, may be significant. Insurance in this layer smooths claims volatility \emph{over risks and time}. In comparison to the insured, the individual insurer has a non-negligible expected value and a smaller, but likely still significant, variance. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper. In Figure \ref{fig:tower}, we label this layer as "Third Layer Excess" in Figure \ref{fig:tower}.
 
 ```{r insurance tower, echo=FALSE, fig.height=4, fig.width=3, fig.cap= "\\label{fig:tower}Example Insurance Tower"}
 par(mar = c(1, 0, 0, 0))
@@ -51,7 +51,11 @@ Capital protection and wealth maximization are related concepts, and utility fun
 
 * Utility functions are typically abstract, whereas the measurement approach we present in this paper is more specifically defined. 
 
+* Valuations based on utility theory are common in economics. In this paper, we present an actuarial view based on risk reduction.
+
 * We frame our approach in the context of commercial insurance and present two value considerations for a commercial insured. 
+
+
 
 We list the papers that we reviewed in Appendix \ref{literature-review}.
 
