For Further Review

--- a/paper/11.0 introduction.Rmd
+++ b/paper/11.0 introduction.Rmd
@@ -1,20 +1,20 @@
 # Introduction
 
-In this paper, we provide a basis to measure the value provided by high-excess layer insurance policies. Our focus in this paper is the highest excess layers purchased by large commercial firms. Insured can compare the value and the premium for the insurance policy to understand whether the insurance purchase is accretive. 
+In this paper, we provide a basis to measure the value provided by high-excess layer insurance policies. Our focus in this paper is the highest excess layers purchased by large commercial firms. Insureds can compare the value of the insurance to the premium for the insurance policy to understand whether the insurance purchase is accretive. 
 
 ## Commercial Insurance Programs 
 
 Commercial insurance programs are often depicted as towers (See Figure \ref{fig:tower}). Extending this analogy, risk retained by the insured typically comprises the lowest floors of the tower . The middle floors include commercially-insured working layers.  High excess layer insurance resides in the penthouse. 
 
-Each of these layers has a cost to it. Insurers establish premiums that are sufficient to cover claim costs and expenses and to return a profit to its shareholders. 
+Each of these layers has a cost to it. Insurers establish premiums that are sufficient to cover claim costs and expenses, and to return a profit to its shareholders. 
 
-The profit provision will be proportional to the volatility of the risk. That is, the required supporting insurer capital is directly proportional to the volatility of the business. As a result, more volatile business will require additional profit to satisfy the insurer's shareholders. Consistent with this notion, we ignore expenses and refer to the profit provision as a capital charge in describing the cost for various insurance layers below. 
+The profit provision will be proportional to the volatility of the risk^[Greater volatility increases the notional capital assigned to the support the risk.]. That is, the required supporting insurer capital is directly proportional to the volatility of the business. As a result, more volatile business will require additional profit to satisfy the insurer's shareholders. Consistent with this notion, we refer to the profit provision as a capital charge in describing the cost for various insurance layers below. 
 
-*   The cost of the lowest layers will have a reasonable degree of predictability. Because costs are predictable, the value of insurance is minimal, and insureds will, therefore, typically retain this risk.^[The insured may realize value though specialized risk or claims management services provided by the insurer.] The cost for these layers will principally be the expected loss with a minimal capital charge for volatility. There may also be frictional costs associated with risk retention, such as increased audit and actuarial fees and claims costs from legal counsel and third-party claim administrators. In our example insurance tower in Figure \ref{fig:tower}, we label this layer as the "$1 million retention."
+*   The cost of the lowest layers will have a reasonable degree of predictability. Because costs are predictable, the value of insurance is minimal, and insureds will, therefore, typically retain this risk.^[The insured may realize value though specialized risk or claims management services provided by the insurer.] In our example insurance tower in Figure \ref{fig:tower}, we label this layer as the "$1 million retention." The cost for these layers will principally be the expected loss and expense with a minimal capital charge for volatility. There may also be frictional costs associated with risk retention, such as increased audit and actuarial fees and claims costs from legal counsel and third-party claim administrators. However, the premium also includes a provision for these services when provided by the insurer. 
 
-*   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but would be predictable over a longer time horizon. The insurance coverage provides value to the insured by smoothing claim volatility \emph{over time}. There may be multiple insurers in the higher working layers. We label these layers as "First Layer Excess" and "Second Layer Excess" in Figure \ref{fig:tower}.
+*   The middle layers provide coverage for claims related to events that occur with a degree of regularity. The amount of claims may not be reasonably predictable in a single year but would be predictable over a longer time horizon. The insurance coverage provides value to the insured by smoothing claim volatility \emph{over time}. There may be multiple insurers in the higher working layers. We label these layers as "First Layer Excess" and "Second Layer Excess" in example in Figure \ref{fig:tower}.
 
-*   Insureds generally do not expect to access coverage from the highest layers. As such, \emph{from the insureds' perspective}, the expected claims will likely be close to $0. The variance of claims in this layer for an indiviudal insured, however, may be significant. Insurance in this layer smooths claims volatility \emph{over risks and time}. In comparison to the insured, the individual insurer has a non-negligible expected value and a smaller, but likely still significant, variance. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper. In Figure \ref{fig:tower}, we label this layer as "Third Layer Excess" in Figure \ref{fig:tower}.
+*   Insureds generally do not expect to access coverage from the highest layers. As such, \emph{from the insureds' perspective}, most likely outcome may be $0. The variance of claims in this layer for an indiviudal insured, however, is likely significant. Insurance in this layer smooths claims volatility \emph{over risks and time}. Over its aggregate high-excess portfolio, the individual insurer will have a non-negligible expected value and a smaller, but likely still significant, variance. As a result of the need to smooth volatility across risks, there are often multiple insurers in these layers, each with a pro-rata share. These high-excess layers are the focus of this paper. In Figure \ref{fig:tower}, we label this layer as "Third Layer Excess" in Figure \ref{fig:tower}.
 
 ```{r insurance tower, echo=FALSE, fig.height=4, fig.width=3, fig.cap= "\\label{fig:tower}Example Insurance Tower"}
 par(mar = c(1, 0, 0, 0))
